fix:expand and collapse

--- a/packages/design/components/Card/index.scss
+++ b/packages/design/components/Card/index.scss
@@ -8,10 +8,10 @@ $num2: var(--card-maxLength, 6);
   align-content: flex-start;
   // background-color: rgba(0, 0, 0, 0.04);
   background-color: var(--card-background-color, var(--pivot-card-background-color));
-  padding: 10px, 8px, 10px, 12px;
+  //padding: 10px, 8px, 10px, 12px;
   margin: 12px;
   &-borderadius {
-    border-radius: 20px;
+    border-radius: 10px;
   }
 
   .#{$prefix}-head {
@@ -74,9 +74,10 @@ $num2: var(--card-maxLength, 6);
   }
   &-middle {
     width: 375px;
-    height: 260px;
+    // height: 260px;
     padding: 10px;
-    padding-bottom: 12px;
+    padding-bottom: 32px;
+
     padding-left: 10px;
   }
 
@@ -117,19 +118,20 @@ $num2: var(--card-maxLength, 6);
         transition: 0.3s max-height;
       }
       .#{$prefix}-card-body-btn {
-        position: absolute;
-        right: 0px;
-        top: $num2;
+        //position: absolute;
+        float: right;
+        //right: 0px;
+        //top: $num2;
         //position: relative;
         //float: right;
         clear: both;
         margin-left: 20px;
-        font-size: 16px;
+        font-size: 14px;
         padding: 0 8px;
-        background: #3f51b5;
-        line-height: 24px;
+        //background: #3f51b5;
+        line-height: 21px;
         border-radius: 4px;
-        color: #fff;
+        color: #2b98ba;
         cursor: pointer;
         &:after {
           content: var(--card-expandText, '展开');
@@ -151,17 +153,20 @@ $num2: var(--card-maxLength, 6);
         content: var(--card-collapseText, '收起');
       }
 
-      .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text + .#{$prefix}-card-body-btn {
-        top: $num2;
-      }
+      // .#{$prefix}-card-body-exp:checked + .#{$prefix}-card-body-text + .#{$prefix}-card-body-btn {
+      //   //top: $num2;
+      // }
     }
   }
 
   .#{$prefix}-card-actions {
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
+    //padding-top: 20px;
+    //padding-bottom: 10px;
+    margin-bottom: 8px;
     width: 100%;
-    height: 29px;
+    //height: 29px;
     font-size: 11px;
     line-height: 17px;
     //text-align: center;
